--- a/html/table.html
+++ b/html/table.html
@@ -1,35 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tables</title>
-</head>
-<body>
+  </head>
+  <body>
     <table>
-        <tr>
-            <td>Columnn 1</td>
-            <td>Columnn 2</td>
-            <td>Columnn 3</td>
-        </tr>
+      <tr>
+        <td>Columnn 1</td>
+        <td>Columnn 2</td>
+        <td>Columnn 3</td>
+      </tr>
     </table>
 
     <table>
-        <tr>
-            <th>Name</th>
-            <th>Email</th>
-            <th>DOB</th>
-        </tr>
-        <tr>
-            <td>Sachin</td>
-            <td>sachin@gmail.com</td>
-            <td>17/01/2002</td>
-        </tr>
-        <tr>
-            <td>Raj</td>
-            <td>raj@gmail.com</td>
-            <td>07/10/2002</td>
-        </tr>
+      <tr>
+        <th>Name</th>
+        <th>Email</th>
+        <th>DOB</th>
+      </tr>
+      <tr>
+        <td>Sachin</td>
+        <td>sachin@gmail.com</td>
+        <td>17/01/2002</td>
+      </tr>
+      <tr>
+        <td>Raj</td>
+        <td>raj@gmail.com</td>
+        <td>07/10/2002</td>
+      </tr>
     </table>
-</body>
-</html> 
+  </body>
+</html>
