--- a/html/headind_list.html
+++ b/html/headind_list.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lists</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Lorem.</h1>
     <h2>Lorem, ipsum.</h2>
     <h3>Lorem, ipsum dolor.</h3>
@@ -16,30 +16,30 @@
     <p>Lorem ipsum <em>dolor</em> sit amet.</p>
 
     <ol>
-        <li>Orange Tea</li>
-        <li>Black Tea</li>
+      <li>Orange Tea</li>
+      <li>Black Tea</li>
     </ol>
 
-    <img src="images/nature.png" width="200px" alt="">
+    <img src="images/nature.png" width="200px" alt="" />
 
     <div>
-        <h1>Block level elements</h1>
-        <ul>
-            <li>Heading h1 to h6</li>
-            <li>ol, li</li>
-            <li>li</li>
-            <li>p</li>
-        </ul>
+      <h1>Block level elements</h1>
+      <ul>
+        <li>Heading h1 to h6</li>
+        <li>ol, li</li>
+        <li>li</li>
+        <li>p</li>
+      </ul>
     </div>
 
     <div>
-        <h1>Inline elements</h1>
-        <ul>
-            <li>a tags</li>
-            <li>img</li>
-            <li>strong</li>
-            <li>em</li>
-        </ul>
+      <h1>Inline elements</h1>
+      <ul>
+        <li>a tags</li>
+        <li>img</li>
+        <li>strong</li>
+        <li>em</li>
+      </ul>
     </div>
-</body>
+  </body>
 </html>
